Job offer Modal Fix for horizontal scrollbar appearing on slide in animation

--- a/wp-content/themes/wikia-careers/assets/less/app.less
+++ b/wp-content/themes/wikia-careers/assets/less/app.less
@@ -684,6 +684,7 @@ h1+.offer-item {
   @line-height-computed-menu: @line-height-computed * 3;
   height: calc(~"100% - @{line-height-computed-menu}");
   margin-top: @line-height-computed-menu;
+  overflow-x: hidden;
 }
 
 .modal-backdrop.in {
